added playsinline in video-player.js

--- a/src/template.html
+++ b/src/template.html
@@ -191,11 +191,12 @@
         autoplay: false,
         loop: true,
         controls: true,
-        start: '110',
-        end: '140',
+        start: 110,
+        end: 140,
         allowFullScreen: true,
         mute: true,
-        modestbranding: true
+        modestbranding: true,
+        playsInline: true
       }
     })
 
@@ -208,7 +209,8 @@
         loop: true,
         muted: true,
         quality: '1080p',
-        allowFullScreen: true
+        allowFullScreen: true,
+        playsInline: true
       }
     })
 
