added local video

--- a/src/template.html
+++ b/src/template.html
@@ -131,6 +131,21 @@
     <section class="story-section">
       <img class="story-image" src="../src/assets/images/image2.jpg" alt="Winter">
     </section>
+
+    <section class="story-section">
+      <div class="story-video-container-wrapper">
+        <div class="story-video-container">
+          <video class="story-video-local" width="1440" height="810" poster="../src/assets/video/poster.jpg" controls muted loop >
+            <source src="../src/assets/video/Header-Image.mp4" type="video/mp4">
+            <source src="../src/assets/video/Header-Image.ogg" type="video/ogg">
+            Leider unterstützt dein Browser keine Video-Tags. Wenn du möchtest, kannst du das Video
+            <a href="../src/assets/video/Header-Image.mp4">herunterladen</a> und in deinem eigenen Video-Player
+            anschauen.
+          </video>
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <script type="text/javascript">
