added audio image

--- a/src/template.html
+++ b/src/template.html
@@ -232,6 +232,18 @@
       </div>
     </section>
 
+    <section class="story-section">
+      <div class="story-media-image">
+        <video class="story-media-image-player" width="1920" height="1280" controls poster="../src/assets/images/image1.jpg">
+          <source src="../src/assets/audio/audio.ogg" type="audio/ogg">
+          <source src="../src/assets/audio/audio.mp3" type="audio/mpeg">
+          Leider unterstützt dein Browser keine Audio-Tags. Wenn du möchtest, kannst du das Audio
+          <a href="../src/assets/audio/audio.mp3">herunterladen</a> und in deinem eigenen Audio-Player
+          anhören.
+        </video>
+      </div>
+    </section>
+
   </main>
 
   <script type="text/javascript">
