--- a/src/template.html
+++ b/src/template.html
@@ -244,6 +244,46 @@
       </div>
     </section>
 
+    <section class="story-section">
+      <div class="story-media-slideshow" id="audioSlideshow">
+        <div class="story-media-slideshow-container">
+          <div class="story-media-image">
+          <video class="story-media-image-player" width="1920" height="1280" controls poster="../src/assets/images/image1.jpg">
+            <source src="../src/assets/audio/audio.ogg" type="audio/ogg">
+            <source src="../src/assets/audio/audio.mp3" type="audio/mpeg">
+            Leider unterstützt dein Browser keine Audio-Tags. Wenn du möchtest, kannst du das Audio
+            <a href="../src/assets/audio/audio.mp3">herunterladen</a> und in deinem eigenen Audio-Player
+            anhören.
+          </video>
+          </div>
+        </div>
+
+        <div class="story-media-slideshow-container">
+          <div class="story-media-image">
+          <video class="story-media-image-player" width="1920" height="1280" controls poster="../src/assets/images/image2.jpg">
+            <source src="../src/assets/audio/audio.ogg" type="audio/ogg">
+            <source src="../src/assets/audio/audio.mp3" type="audio/mpeg">
+            Leider unterstützt dein Browser keine Audio-Tags. Wenn du möchtest, kannst du das Audio
+            <a href="../src/assets/audio/audio.mp3">herunterladen</a> und in deinem eigenen Audio-Player
+            anhören.
+          </video>
+          </div>
+        </div>
+
+        <div class="story-media-slideshow-container">
+          <div class="story-media-image">
+          <video class="story-media-image-player" width="1920" height="1280" controls poster="../src/assets/images/image3.jpg">
+            <source src="../src/assets/audio/audio.ogg" type="audio/ogg">
+            <source src="../src/assets/audio/audio.mp3" type="audio/mpeg">
+            Leider unterstützt dein Browser keine Audio-Tags. Wenn du möchtest, kannst du das Audio
+            <a href="../src/assets/audio/audio.mp3">herunterladen</a> und in deinem eigenen Audio-Player
+            anhören.
+          </video>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <script type="text/javascript">
@@ -306,6 +346,11 @@
       arrows: true,
       controller: "dot"
     });
+
+    // image audio Slideshow
+    new $story.MediaSlideshow({
+      id: "audioSlideshow"
+    })
 
     // Youtube Video
     new $story.VideoPlayer({
